# omnimsg

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: net_compat.h  omnimsg.c
